<resources>
    <!--Class activity-->
    <string name="student_list">Danh Sách Lớp</string>
    <string name="app_name">TeachSomeAfterSchool</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="class_list">Danh Sách Lớp</string>
    <string name="monday">2</string>
    <string name="tuesday">3</string>
    <string name="wednesday">4</string>
    <string name="thusday">5</string>
    <string name="friday">6</string>
    <string name="saturday">7</string>
    <string name="sunday">CN</string>

    ////Class info activity
    <string-array name="grade_list">
        <item>Lớp 10</item>
        <item>Lớp 11</item>
        <item>Lớp 12</item>
    </string-array>
    <string name="grade_hint">
        Chọn Lớp
    </string>
    <string name="tuition">Học phí/HS</string>
    <string name="monday1">Thứ 2</string>
    <string name="tuesday1">Thứ 3</string>
    <string name="wednesday1">Thứ 4</string>
    <string name="thusday1">Thứ 5</string>
    <string name="friday1">Thứ 6</string>
    <string name="saturday1">Thứ 7</string>
    <string name="sunday1">CN</string>
    <string name="start">Bắt Đầu</string>
    <string name="spell">Sáng</string>
    <string name="stop">Kết Thúc</string>
    <string name="edit">Sửa</string>
    <string name="cancel">Hủy</string>
    <string name="ok">Ok</string>
    <string name="className">Lớp (HT)</string>
    <string name="fullName">Họ Tên</string>
    <string name="realClass">Lớp Thực</string>
    <string name="School">Trường</string>
    <string name="phoneNo">Số ĐT</string>
    <string name="address">Địa Chỉ</string>
    <string name="avatar">Chọn ảnh</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="image_chooser_recommend">Chọn ảnh từ</string>
    <string name="tvGallery">Thư mục ảnh</string>
    <string name="tvCamera">Chụp ảnh</string>
    <string name="jan">01</string>
    <string name="feb">02</string>
    <string name="mar">03</string>
    <string name="apr">04</string>
    <string name="may">05</string>
    <string name="jun">06</string>
    <string name="jul">07</string>
    <string name="aug">08</string>
    <string name="sep">09</string>
    <string name="oct">10</string>
    <string name="nov">11</string>
    <string name="dec">12</string>
    <string name="total">Tổng:</string>
    <string name="Indebt">Nợ:</string>
    <string name="student_infor_title">Thông tin học sinh</string>
    <string name="miss_tuition">Bạn chưa nhập số tiền</string>
    <string name="miss_schedule">Bạn chưa chọn lịch học</string>
    <string name="null_chosen_day">Bạn chưa chọn thứ</string>
    <string name="add_new_student">Thêm HS</string>
    <string name="error_no_class_existed">Bạn chưa tạo lớp</string>
    <string name="notification_success_creating_class">Bạn đã tạo lớp thành công</string>
    <string name="tuition_detail">Thông tin học phí</string>
    <string name="student_detail">Thông tin chi tiết</string>
    <string name="delete">Xóa</string>
    <string name="move">Chuyển lớp</string>
    <string name="student_tuition">Tình trạng học phí</string>
</resources>
