<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="60dp">
    <TextView
        android:id="@+id/tvclass_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"></TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">
        <TextView
            android:gravity="center"
            android:id="@+id/tvmonday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/monday"></TextView>
        <TextView
            android:gravity="center"
            android:text="@string/tuesday"
            android:id="@+id/tvtuesday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"></TextView>
        <TextView
            android:gravity="center"
            android:text="@string/wednesday"
            android:id="@+id/tvwednesday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"></TextView>
        <TextView
            android:gravity="center"
            android:text="@string/thusday"
            android:id="@+id/tvthusday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"></TextView>
        <TextView
            android:gravity="center"
            android:text="@string/friday"
            android:id="@+id/tvfriday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"></TextView>
        <TextView
            android:gravity="center"
            android:text="@string/saturday"
            android:id="@+id/tvsaturday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"></TextView>
        <TextView
            android:gravity="center"
            android:text="@string/sunday"
            android:id="@+id/tvsunday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"></TextView>
    </LinearLayout>

</LinearLayout>