<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="@drawable/weekly_rounded_button_scheduled"
    >
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <TextView
            android:background="@color/lightgrey"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/image_chooser_recommend"
            android:gravity="center"
            android:textStyle="bold"
            style="@style/tvTuition"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="4px"
            android:background="@color/gray"
            />


    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvGallery"
            android:background="@color/lightgrey"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tvGallery"
            android:gravity="center"
            android:textStyle="bold"
            style="@style/tvTuition"/>
        <TextView
            android:layout_width="4px"
            android:layout_height="match_parent"
            android:background="@color/gray"
            />
        <TextView
            android:id="@+id/tvCamera"
            android:background="@color/lightgrey"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tvCamera"
            android:gravity="center"
            android:textStyle="bold"
            style="@style/tvTuition"/>


    </LinearLayout>

</LinearLayout>